adjusted css to prevent overlap

--- a/frontend/src/components/Calendar.module.css
+++ b/frontend/src/components/Calendar.module.css
@@ -9,3 +9,7 @@
     transform: translateX(-50%);
     background-color: rgba(80, 252, 255, 0.746);
 }
+
+.calendarViewEntries {
+    padding-right: 10%;
+}
