--- a/frontend/src/pages/Profile/Profile.module.css
+++ b/frontend/src/pages/Profile/Profile.module.css
@@ -3,10 +3,6 @@
     width: 50%;
 }
 
-.calendarViewEntries {
-    width: 30%;
-}
-
 .userEntriesContainer {
-    width: 65%;
+    width: 55%;
 }
